mostly numerical meth

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -35,14 +35,15 @@
 %      3) the s-parameter method, although widely used, does not always give correct results
 %  * illustrated the difference of these results against CDH
 %  * provide the simulation environment which facilitates correct computations,  and solves 
-%	 the phase-ambiguity in the s-parameter method in an original way.
-%    We validated these FDTD computations against
+%	  1) the artifacts from the near field around the structure being recorded by the monitor planes (--reformulate)
+%	  2) the phase-ambiguity in the s-parameter method by mathematical means
+%  * We validated these FDTD computations against
 %     1) the H-bars spectra in the NumMet section
 %	  2) the Pendry's and Maslovski's models for f_p
-%	  3) ...
+%	  3) 
 %  * express author's opinions on: 
 %		1) viability of the "information velocity"   
-%		2) local media application   
+%		2) local media application and the importance of spatial dispersion on some structures
 %		3) questioning the supposed novelty and practical impact of MMs
 %		4) that probably no dielectric-only metamaterial can be built for permittivity contrast below 50
 
