README.md roadmap of remaining toods

--- a/expe.tex
+++ b/expe.tex
@@ -133,9 +133,9 @@ This  property however prove to be also detrimental for precise sieving, as the 
 
 %}}}
 \paragraph{Second sieving apparatus}%{{{
-\begin{figure}[ht] \caption{\textbf{a)} A sketch of the acoustic sieving device, and \textbf{b)} a photograph thereof} \label{fg_sieving2} \centering 
-\textbf{a)}\includegraphics[height=8cm]{img/technology/sieve2_sieving_scheme.pdf}
-\textbf{b)}\includegraphics[height=8cm]{img/technology/sieving_m.pdf}
+\begin{figure}[ht] \caption{\textbf{(a)} A sketch of the acoustic sieving device, and \textbf{(b)} a photograph thereof} \label{fg_sieving2} \centering 
+	\begin{overpic}[height=.4\textwidth]{img/technology/sieve2_sieving_scheme.pdf}  \put(-10,93) {\textbf{(a)}} \end{overpic}
+	\begin{overpic}[height=.4\textwidth]{img/technology/sieving_m.pdf}              \put(1,85) {\textbf{(b)}} \end{overpic}
 \end{figure}
 The partially promising results and, more importantly, obvious deficiencies of the previous apparatus motivated the construction a second one depicted in Fig. \ref{fg_sieving2}.
 Different from any other sieving apparatus known to the author, this one made use of intense vertical acoustic wave for the movement of particles. It consisted of two coaxial glass tubes: The inner tube, with outer diameter of 13 mm, had a round metallic sieve glued to its bottom, and on its upper end it was covered by a 20 mm acoustic transducer. The outer tube (90 mm long, outer diameter 26 mm) surrounded the inner one and had a round bottom, where the particles collected. 
@@ -187,8 +187,7 @@ A similar sample used in experiment consisted of bars from strontium titanate (S
 where a structure with 10--30 $\upmu$m resolution was written into a thin slab of the dielectric of a similar thickness \cite{yahiaoui2011tunable}.
 
 If the slab is made of a monocrystal or a ceramic, it is usually extremely brittle and also sensitive to breaking due to thermal stresses. Femtosecond laser micro-machining can alleviate both problems thanks to evaporating most of the heated material before the heat can spread by thermal conduction. Fabrication of the strontium titanate bars was accomplished by the professional Alphanov facility in France.
-\todo{write about the deposition of gold electrodes?}
-\todo{should make some conclusion}
+% should make some conclusion
 %}}}
 \paragraph{Fabrication of sieves and fishnet metamaterial layers}%{{{
 Compared to the dielectrics, femtosecond machining of metallic sheets into meshes is relatively easy and was implemented in our laboratory. Machining of free-standing wire media was not succesfull and no such sample was finished, as the resulting thin wires were bent out of their original plane and their spacing was uneven.
