--- a/conclusion.tex
+++ b/conclusion.tex
@@ -36,11 +36,11 @@
 %  * illustrated the difference of these results against CDH
 %  * provide the simulation environment which facilitates correct computations,  and solves 
 %	  1) the artifacts from the near field around the structure being recorded by the monitor planes (--reformulate)
-%	  2) the phase-ambiguity in the s-parameter method by mathematical means
+%	  2) by mathematical means, the phase-ambiguity in the s-parameter method 
 %  * We validated these FDTD computations against
 %     1) the H-bars spectra in the NumMet section
 %	  2) the Pendry's and Maslovski's models for f_p
-%	  3) 
+%	  3) the composite spectra of statistical sample of microspheres
 %  * express author's opinions on: 
 %		1) viability of the "information velocity"   
 %		2) local media application and the importance of spatial dispersion on some structures
